
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/call_activity_btn"
        android:layout_width="115dp"
        android:layout_height="70dp"
        android:text="@string/call_activity_btn"
        app:layout_constraintBottom_toTopOf="@+id/train_activity_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <Button
        android:id="@+id/train_activity_btn"
        android:layout_width="115dp"
        android:layout_height="70dp"
        android:text="@string/train_activity_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calendar_activity_btn"
        android:layout_width="116dp"
        android:layout_height="70dp"
        android:text="@string/calendar_activity_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/train_activity_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>