<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_green"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        >


        <androidx.cardview.widget.CardView
            android:id="@+id/cardviewPFP"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardCornerRadius="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/bg_circle"
                android:contentDescription="@string/pfp_desc"
                android:paddingTop="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/first_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/fst_name_input_hint"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardviewPFP" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/scd_name_input_hint"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name_field" />

        <EditText
            android:id="@+id/phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/phone_number_input_hint"
            android:inputType="phone"
            android:padding="16dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_field" />

        <EditText
            android:id="@+id/bday_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/bday_input_hint"
            android:inputType="date"
            android:padding="16dp"
            android:textSize="14sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_field" />


        <ScrollView
            android:id="@+id/scrollview_expertise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit_text"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="64dp"
            app:layout_constraintHeight_min="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bday_field">

            <EditText
                android:id="@+id/expertise_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expertise_input_hint"
                android:inputType="textMultiLine"
                android:textSize="14sp" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollview_expertise">

            <Button
                android:id="@+id/validate_button"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_200"
                android:padding="16dp"
                android:text="@string/enter_button_hint"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expertise_field" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_nav"
        app:itemIconTint="#06EB21"
        app:itemTextColor="#06EB21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>